<resources>
    <string name="app_name">BIGSIS</string>
    <string name="participer">participer</string>
    <string name="rechercher_un_trajet">Rechercher un trajet</string>
    <string name="add">Ajouter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_trip">Créer un trajet</string>
    <string name="date">Date</string>
    <string name="add_destination"><u>Arrivée (place, station métro, parking...)</u></string>
    <string name="add_departure"><u>Départ (place, station métro, parking...)</u></string>
    <string name="create">Créer</string>
    <string name="search_trip">Rechercher un trajet</string>
    <string name="trips">Trajets</string>
    <string name="add_a_trip">Créer un trajet</string>
    <string name="sign_in">Se Connecter</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="signin">Connexion</string>
    <string name="password">Mot de passe*</string>
    <string name="mail_adress">Adresse mail*</string>
    <string name="forgot_password">Mot de passe oublié ?</string>
    <string name="register">S\'inscrire</string>
    <string name="email_adress">Veuillez indiquer votre adresse e-mail</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="email_was_sent">Un e-mail vous a été envoyé</string>
    <string name="enter_password">Veuillez entrer votre mot de passe</string>
    <string name="email_or_password_incorrect">Mot de passe ou e-mail incorrect</string>
    <string name="contacts">Contacts</string>
    <string name="our_advices">Nos conseils</string>
    <string name="search">Rechercher</string>
    <string name="firstname">Prénom*</string>
    <string name="lastname">Nom*</string>
    <string name="descripiton">Descripiton</string>
    <string name="username">Nom d\'utilisateur*</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="required_fields">*Champs obligatoires</string>
    <string name="ok">OK</string>
    <string name="participants">Participants</string>
    <string name="my_contacts">Mes contacts</string>
    <string name="requests">Demandes d\'ajout</string>
    <string name="no_request">Pas de demandes d\'ajout</string>
    <string name="accept">Accepter</string>
    <string name="delete">Supprimer</string>
    <string name="police_17">Police (17)</string>
    <string name="pompier_18">Pompier (18)</string>
    <string name="call">Appeler</string>
    <string name="alert_staff">Alerter staff</string>
    <string name="alert">Alerte</string>
    <string name="activate_alert">Êtes-vous sûr de vouloir déclencher l\'alerte?</string>
    <string name="activate">Déclencher</string>
    <string name="conversations">Conversations</string>
    <string name="want_to_quit">Voulez-vous vraiment quitter cette conversation ?</string>
    <string name="quit">Quitter</string>
    <string name="write_message">Taper message ...</string>
    <string name="copy">Copier</string>
    <string name="tag">Épingler</string>
    <string name="untag">Voulez-vous vraiment annuler l\'épinglage ?</string>
    <string name="events">Évènements</string>
    <string name="create_event">Créer un évènement</string>
    <string name="add_title">Nom</string>
    <string name="address"><u>Adresse</u></string>
    <string name="select_participants">Sélectionner campus</string>
    <string name="select_staff_members">Sélectionner membres du staff</string>
    <string name="description">Description</string>
    <string name="alert_for_event">Alerte disponible pour cet évènement</string>
    <string name="date_start_event">Début de l\'évènement</string>
    <string name="date_end_event">Fin de l\'évènement</string>
    <string name="information">Informations</string>
    <string name="see_more">... voir plus</string>
    <string name="Finish">Terminer</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="continue_sign_up">Continuer</string>
    <string name="modify">Modifier</string>
    <string name="password_not_identic">Les mots de passe ne sont pas identiques</string>
    <string name="choose_your_campus">Choisis ton campus</string>
    <string name="campus_entiore">Campus Entiore</string>
    <string name="campus_lascrosses">Campus Lascrosses</string>
    <string name="campus_paris">Campus Paris</string>
    <string name="required_field">Champs obligatoire</string>
    <string name="username_exist">Ce nom d\'utilisateur existe déjà</string>
    <string name="edit_my_trip">Modifier mon trajet</string>
    <string name="delete_trip">Voulez vous vraiment supprimer ce trajet ?</string>
    <string name="delete_contact">Voulez-vous vraiment supprimer ce contact?</string>
    <string name="or">- OU -</string>
    <string name="all_campus">Tous les campus</string>
    <string name="updated">modifié</string>
    <string name="added">ajouté</string>
    <string name="your_trip_is">Votre trajet a été</string>
    <string name="your_event_is">Votre évènement a été</string>
    <string name="request_accept">Invitation acceptée</string>
    <string name="request_refused">Invitation refusée</string>
    <string name="account">Compte</string>
    <string name="security">Sécurité</string>
    <string name="log_out">Se déconnecter</string>
    <string name="delete_my_account">Se désinscrire</string>
    <string name="settings">Paramètres</string>
    <string name="modify_event">Modifier l\'évènement</string>
    <string name="delete_event">Voulez vous vraiment supprimer cet évènement ?</string>
    <string name="last_step">Dernière étape</string>
    <string name="meet">Faisons connaissance</string>
    <string name="Langage">Langue</string>
    <string name="campus">Campus</string>
    <string name="show">Voir</string>
    <string name="acccept_cgu">J\'ai lu et j\'accepte</string>
    <string name="les_cgu">
<a href="https://bigsis.fr/index.php/cgu/">les CGU</a>
</string>
    <string name="policy"><a href="https://bigsis.fr/index.php/politique-de-protection-des-donnees/">la politique de confidentialité</a></string>
    <string name="cgue">CGU</string>
    <string name="policy_conf">Politique de confidentialité</string>
    <string name="want_to_delete_account">Voulez-vous vraiment supprimer votre compte?</string>
    <string name="validate">Valider</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="update_profile">Modifier le profil</string>
    <string name="emergency">Urgence (112)</string>
    <string name="enter_date_trip">Veuillez indiquer la date et l\'heure du trajet</string>
    <string name="all_fields">Veuillez remplir tous les champs</string>
    <string name="enter_upcoming_date">Veuillez indiquer une date valide</string>
    <string name="select_groups">Veuillez sélectionner les groupes</string>
    <string name="alrt_in_progress">Alerte en cours ...</string>
    <string name="goTrip">Partir :</string>
    <string name="today">Aujourd\'hui</string>
    <string name="le">Le</string>
    <string name="fromItinerary">De</string>
    <string name="my_location">Ma position</string>
    <string name="itinerary">Itinéraire</string>
    <string name="tripAdd">Trajet :</string>
    <string name="number_of_places">Nombre de places disponibles :</string>
    <string name="___">_ _ _</string>
    <string name="show_itinerary">Voir itinéraire</string>
    <string name="complete">Complet</string>
    <string name="show_staff">Voir STAFF...</string>
    <string name="email_campus">email@campus.com*</string>
    <string name="dont_participate">Ne plus participer</string>
    <string name="staff_alert_sent">Alerte staff envoyé</string>
    <string name="desable_alert">Désactiver l\'alerte</string>
    <string name="alert_on_going">Alerte en cours...</string>
    <string name="sent_alert">a lancé une alerte</string>
    <string name="where_are_you_going">Où allez-vous ?</string>
    <string name="going">J\'y vais</string>
    <string name="at">Il y\'a </string>
    <string name="minutes"> minutes</string>
    <string name="nobody">Personne n\'est en route</string>
    <string name="people">Personnes en route</string>
    <string name="Alert">Situation sous contrôle?</string>
</resources>
