<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartSignUpFragment"
    android:background="@color/colorPrimary">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/imgLogoStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/meet"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/etUserNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogoStart"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserNameSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/lastname"
        android:inputType="textPersonName|textCapSentences"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etFirstnameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNameSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/firstname"
        android:inputType="textPersonName|textCapSentences"
        android:padding="5dp" />

    <EditText
        android:id="@+id/etDescriptionSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFirstnameSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="10dp"
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="6"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/btSignUpContinuation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescriptionSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_btn_sign_up"
        android:text="@string/continue_sign_up"
        android:textColor="@color/colorPrimaryDark" />

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btSignUpContinuation"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone" />

</RelativeLayout>
</ScrollView>