<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreyLight">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french"
            android:padding="10dp" />
        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:padding="10dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btValidate"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/colorPrimary"
        android:minHeight="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/validate"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />
</LinearLayout>