<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.SignInActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="150dp"
            app:srcCompat="@drawable/smile_logo" />

        <EditText
            android:id="@+id/etMailAdressSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/email_adress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMailAdressSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btSignInComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPasswordSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_btn_sign_up"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btSignInComplete"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvForgotPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>